--- a/app/src/main/res/layout/portion_viewlistrow_layout.xml
+++ b/app/src/main/res/layout/portion_viewlistrow_layout.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView" />
