--- a/app/src/main/res/menu/faculty_drawermenu.xml
+++ b/app/src/main/res/menu/faculty_drawermenu.xml
@@ -13,7 +13,7 @@
     <item android:id="@+id/logout" android:icon="@drawable/ic_logout" android:title="Logout" android:onClick="OnFacLogout" />
 
     <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title=""
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
