--- a/app/src/main/res/layout/assignt_viewlayout.xml
+++ b/app/src/main/res/layout/assignt_viewlayout.xml
@@ -1,57 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:padding="10dp"
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true">
 
-        <TableLayout
+        <RelativeLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TableRow android:padding="10dp">
 
-                <TextView
-                    android:id="@+id/tv_uploadId"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:text="Upload \n ID"
-                    android:textAlignment="center" />
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="13dp"
+                android:text="File Name"
+                android:textAlignment="textEnd"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_fileName"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="File \n Name"
-                    android:textAlignment="center" />
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/Date"
+                android:layout_alignRight="@+id/Date"
+                android:layout_below="@+id/textView25"
+                android:layout_marginTop="17dp"
+                android:text="Faculty"
+                android:textAlignment="textEnd"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_Desc"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Description"
-                    android:textAlignment="center" />
+            <TextView
+                android:id="@+id/Date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/textView25"
+                android:layout_alignRight="@+id/textView25"
+                android:layout_below="@+id/textView28"
+                android:layout_marginTop="22dp"
+                android:text="Date"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_Faculty"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Faculty"
-                    android:textAlignment="center" />
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView25"
+                android:layout_alignBottom="@+id/textView25"
+                android:layout_marginLeft="17dp"
+                android:layout_marginStart="17dp"
+                android:layout_toEndOf="@+id/Date"
+                android:layout_toRightOf="@+id/Date"
+                android:text=":"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_UploadDate"
-                    android:layout_width="70dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Upload Date"
-                    android:textAlignment="center" />
+            <TextView
+                android:id="@+id/textView32"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/Date"
+                android:layout_alignLeft="@+id/textView30"
+                android:layout_alignStart="@+id/textView30"
+                android:text=":"
+                android:textStyle="bold" />
 
-            </TableRow>
-        </TableLayout>
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView32"
+                android:layout_alignStart="@+id/textView32"
+                android:layout_alignTop="@+id/Date"
+                android:text=":"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_fileName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView30"
+                android:layout_alignBottom="@+id/textView30"
+                android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp"
+                android:layout_toEndOf="@+id/textView30"
+                android:layout_toRightOf="@+id/textView30"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_Faculty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/textView32"
+                android:layout_alignBottom="@+id/textView32"
+                android:layout_alignLeft="@+id/tv_fileName"
+                android:layout_alignStart="@+id/tv_fileName"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/tv_UploadDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/textView33"
+                android:layout_alignLeft="@+id/tv_Faculty"
+                android:layout_alignStart="@+id/tv_Faculty"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/Date"
+                android:layout_alignRight="@+id/Date"
+                android:layout_below="@+id/Date"
+                android:layout_marginTop="19dp"
+                android:text="Description"
+                android:textAlignment="textEnd"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView39"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView33"
+                android:layout_alignStart="@+id/textView33"
+                android:layout_alignTop="@+id/textView38"
+                android:text=":" />
+
+            <TextView
+                android:id="@+id/tv_Desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tv_UploadDate"
+                android:layout_alignStart="@+id/tv_UploadDate"
+                android:layout_alignTop="@+id/textView39"
+                android:text="TextView" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
