--- a/app/src/main/res/layout/portion_layout.xml
+++ b/app/src/main/res/layout/portion_layout.xml
@@ -17,27 +17,32 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Subject"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Topic Name"
-            android:textAlignment="center"
+            android:layout_weight=".5"
+            android:text="Total"
+            android:textAlignment="viewStart"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Completed"
-            android:textAlignment="center"
+            android:layout_weight=".5"
+            android:text="Remain"
+            android:textAlignment="viewStart"
             android:textStyle="bold" />
 
-        </LinearLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 
     <ListView
