--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -62,19 +62,19 @@
 
 
         </LinearLayout>
+
         <android.support.v7.widget.CardView
-            app:cardCornerRadius="15dp"
-            android:layout_margin="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp">
 
             <ImageView
 
                 android:id="@+id/iv_nav"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#4a000000"
-                android:cropToPadding="true"
+                android:background="#4153b5"
                 android:src="@drawable/ic_navigation" />
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
