--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -1,85 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:padding="10dp">
 
-    <TableLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TableRow android:padding="10dp">
 
-            <TextView
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
 
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:text="Test \n Date"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+            <TableRow >
 
-            <TextView
+                <TextView
 
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Batch \n Id"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:gravity="start"
+                    android:text="Test \n Date"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
 
-            <TextView
+                <TextView
 
-                android:layout_width="70dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Obtained \n Marks"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="Batch \n Id"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
 
-            <TextView
+                <TextView
 
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Total \n Marks"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="Obtained \n Marks"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
 
-            <TextView
+                <TextView
 
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Passing"
-                android:textAlignment="center"
-                android:textStyle="bold" />
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="Total \n Marks"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
 
-            <TextView
+                <TextView
 
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Subject"
-                android:textAlignment="center"
-                android:textStyle="bold" />
-        </TableRow>
-    </TableLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".15">
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="Passing"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
+
+                <TextView
+
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="Subject"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold" />
+            </TableRow>
+        </TableLayout>
 
         <ListView
+            android:id="@+id/lv_test"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tableLayout" />
+
+        <!--<ListView
 
             android:id="@+id/lv_test"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tableLayout" />-->
     </RelativeLayout>
-</LinearLayout>
+
+</HorizontalScrollView>
