--- a/app/src/main/res/layout/fac_announc_add_layout.xml
+++ b/app/src/main/res/layout/fac_announc_add_layout.xml
@@ -113,6 +113,7 @@
         android:inputType="textMultiLine" />
 
         <Button
+            android:backgroundTint="#09B0B9"
             android:id="@+id/btn_FacAddAnnounc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
