--- a/app/src/main/res/layout/assignt_viewlayout.xml
+++ b/app/src/main/res/layout/assignt_viewlayout.xml
@@ -146,6 +146,39 @@
                 android:layout_alignTop="@+id/textView39"
                 android:text="TextView" />
 
+            <TextView
+                android:id="@+id/tv_readMore1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tv_Desc"
+                android:layout_alignStart="@+id/tv_Desc"
+                android:layout_below="@+id/tv_Desc"
+                android:layout_marginTop="14dp"
+                android:text="ReadMore" />
+
+            <TextView
+                android:id="@+id/tv_readLess1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/tv_readMore1"
+                android:layout_alignRight="@+id/tv_readMore1"
+                android:layout_alignTop="@+id/tv_readMore1"
+                android:text="ReadLess" />
+
+            <!--<com.borjabravo.readmoretextview.ReadMoreTextView
+                android:id="@+id/tv_Desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tv_UploadDate"
+                android:layout_alignStart="@+id/tv_UploadDate"
+                android:layout_alignTop="@+id/textView39"
+                android:text="TextView"
+                app:trimExpandedText="Read More"
+                app:trimCollapsedText="Read Less"
+                app:trimLength="2"
+                app:trimMode="trimModeLine"
+                app:colorClickableText="#9e9d9d"/>-->
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
