--- a/app/src/main/res/layout/fac_announc_layout.xml
+++ b/app/src/main/res/layout/fac_announc_layout.xml
@@ -7,6 +7,7 @@
 
 
     <Button
+        android:backgroundTint="#09B0B9"
         android:id="@+id/btn_FacAddAnnounc1"
 
         android:layout_width="364dp"
