--- a/app/src/main/res/layout/fac_announc_tabblayout.xml
+++ b/app/src/main/res/layout/fac_announc_tabblayout.xml
@@ -8,6 +8,7 @@
     tools:context="in.classguru.classguru.Fac_Announc_tabbActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:background="#148388"
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
