--- a/app/src/main/res/layout/fac_portionupdate_layout.xml
+++ b/app/src/main/res/layout/fac_portionupdate_layout.xml
@@ -153,6 +153,7 @@
                 android:text="TextView" />
 
             <Button
+                android:backgroundTint="#09B0B9"
                 android:id="@+id/btn_updatePortionTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
