--- a/app/src/main/res/layout/fee_content_layout.xml
+++ b/app/src/main/res/layout/fee_content_layout.xml
@@ -4,12 +4,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.design.widget.AppBarLayout
+        android:background="#148388"
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.design.widget.TabLayout
+
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
