--- a/app/src/main/res/layout/activity_fac__portion_list_view_.xml
+++ b/app/src/main/res/layout/activity_fac__portion_list_view_.xml
@@ -27,5 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1.8"
-        android:text="Update" />
+        android:backgroundTint="#09B0B9"
+        android:text="Update"
+        android:textColor="@color/white" />
 </LinearLayout>
