--- a/app/src/main/res/layout/fac_studattend_layout.xml
+++ b/app/src/main/res/layout/fac_studattend_layout.xml
@@ -5,40 +5,36 @@
     android:orientation="vertical">
 
 
-    <TableLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="wrap_content">
 
-        <TableRow>
+        <TextView
+            android:id="@+id/et_datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/spinner"
+            android:layout_marginLeft="43dp"
+            android:layout_marginStart="43dp"
+            android:gravity="center"
+            android:text="Select Date"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/et_datePicker"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Select Date"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-        </TableRow>
+            android:layout_toEndOf="@+id/et_datePicker"
+            android:layout_toRightOf="@+id/et_datePicker"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"/>
 
-       <!-- <TableRow android:layout_marginTop="10dp">
-
-            <Button
-                android:id="@+id/btn_markStud"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Mark" />
-        </TableRow>-->
-    </TableLayout>
+    </RelativeLayout>
 
 
     <LinearLayout
