--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="300dp">
 
         <LinearLayout
-            android:background="#4052b5"
+            android:background="#09B0B9"
 
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -63,20 +63,15 @@
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="10dp">
+
 
             <ImageView
 
                 android:id="@+id/iv_nav"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="#4153b5"
                 android:src="@drawable/ic_navigation" />
-        </android.support.v7.widget.CardView>
+        
         <android.support.v7.widget.CardView
             android:layout_marginTop="215dp"
             android:layout_centerHorizontal="true"
