--- a/app/src/main/res/layout/fac_profile1.xml
+++ b/app/src/main/res/layout/fac_profile1.xml
@@ -8,30 +8,20 @@
     app:expandedTitleMarginStart="70dp"
     android:orientation="vertical">
 
-
-
-            <!--<ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:cropToPadding="true"
-                />-->
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar1"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:layout_collapseMode="pin"
-                android:minHeight="?attr/actionBarSize">
-                <ImageView
-                    android:id="@+id/iv_nav"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_navigation" />
-            </android.support.v7.widget.Toolbar>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar1"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_collapseMode="pin"
+            android:minHeight="?attr/actionBarSize">
+            <ImageView
+                android:id="@+id/iv_nav"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_navigation1" />
+        </android.support.v7.widget.Toolbar>
 
 
 
@@ -103,7 +93,6 @@
                 android:padding="10dp">
 
             </ListView>
-
         </RelativeLayout>
 
 
