--- a/app/src/main/res/layout/fac_profile1.xml
+++ b/app/src/main/res/layout/fac_profile1.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            android:background="#09B0B9"
             android:id="@+id/toolbar1"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -20,7 +21,7 @@
                 android:id="@+id/iv_nav"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_navigation1" />
+                android:src="@drawable/ic_navigation" />
         </android.support.v7.widget.Toolbar>
 
 
@@ -33,7 +34,63 @@
             android:layout_height="match_parent"
             >
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <RelativeLayout
+                android:id="@+id/relativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:background="#09B0B9">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+
+                    android:id="@+id/iv_FacProfile"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="11dp"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginTop="11dp"
+                    android:adjustViewBounds="false"
+                    android:elevation="8dp"
+                    android:src="@drawable/ic_user"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="3dp" />
+
+                <TextView
+                    android:id="@+id/tv_FacFullname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="51dp"
+                    android:layout_marginStart="51dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_toEndOf="@+id/iv_FacProfile"
+                    android:layout_toRightOf="@+id/iv_FacProfile"
+                    android:fontFamily="@font/allerta_stencil"
+                    android:text="User Name"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_FacNumb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/tv_FacFullname"
+                    android:layout_alignStart="@+id/tv_FacFullname"
+                    android:layout_below="@+id/tv_FacFullname"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
+                    android:layout_marginTop="12dp"
+                    android:text="7208121247"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <!--<de.hdodenhof.circleimageview.CircleImageView
 
                 android:id="@+id/iv_FacProfile"
                 android:layout_width="100dp"
@@ -79,18 +136,18 @@
                 android:text="7208121247"
                 android:textColor="#c4c4c4"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold" />-->
 
             <ListView
-                android:scrollbars="vertical"
-                android:layout_marginTop="10dp"
                 android:id="@+id/lv_profile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/iv_FacProfile"
-                android:padding="10dp">
+                android:layout_below="@+id/relativeLayout"
+                android:padding="10dp"
+                android:paddingTop="20dp"
+                android:scrollbars="vertical">
 
             </ListView>
         </RelativeLayout>
