--- a/app/src/main/res/layout/facannounc_view_layout.xml
+++ b/app/src/main/res/layout/facannounc_view_layout.xml
@@ -127,18 +127,20 @@
                 android:id="@+id/tv_readMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView16"
-                android:layout_toEndOf="@+id/textView16"
-                android:layout_toRightOf="@+id/textView16"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_facNotDesc"
+                android:layout_marginTop="8dp"
                 android:text="Read More" />
 
             <TextView
                 android:id="@+id/tv_readLess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView16"
-                android:layout_toEndOf="@+id/textView16"
-                android:layout_toRightOf="@+id/textView16"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tv_facNotDesc"
+                android:layout_marginTop="8dp"
                 android:text="Read Less" />
 
         </RelativeLayout>
