--- a/app/src/main/res/layout/fragment_fee__frag2.xml
+++ b/app/src/main/res/layout/fragment_fee__frag2.xml
@@ -26,7 +26,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Payment \n Mode"
+                        android:text="Pay Mode"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -35,7 +35,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Payment \n Date"
+                        android:text="Pay Date"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -44,7 +44,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Cheque \n Date"
+                        android:text="Chq Date"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Bank \n Name"
+                        android:text="Bank Name"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -62,7 +62,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Cheque \n No."
+                        android:text="Chq No."
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -71,7 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Transaction \n ID"
+                        android:text="Transac. ID"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Received \n "
+                        android:text="Received "
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -89,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Paid \n Recently"
+                        android:text="Recent Pay"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
@@ -98,7 +98,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
 
-                        android:text="Balance \n "
+                        android:text="Balance"
                         android:textAlignment="center"
                         android:textStyle="bold" />
                 </TableRow>
