--- a/app/src/main/res/layout/assignt_viewlayout.xml
+++ b/app/src/main/res/layout/assignt_viewlayout.xml
@@ -159,20 +159,14 @@
                 android:layout_alignRight="@+id/tv_readMore1"
                 android:layout_alignTop="@+id/tv_readMore1" />
 
-            <!--<com.borjabravo.readmoretextview.ReadMoreTextView
-                android:id="@+id/tv_Desc"
+            <!--<Button
+                android:id="@+id/btn_download"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/tv_UploadDate"
-                android:layout_alignStart="@+id/tv_UploadDate"
-                android:layout_alignTop="@+id/textView39"
-                android:text="TextView"
-                app:trimExpandedText="Read More"
-                app:trimCollapsedText="Read Less"
-                app:trimLength="2"
-                app:trimMode="trimModeLine"
-                app:colorClickableText="#9e9d9d"/>-->
-
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:text="Download" />-->
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
