--- a/app/src/main/res/drawable/ic_assignment.xml
+++ b/app/src/main/res/drawable/ic_assignment.xml
@@ -1,11 +1,18 @@
-<vector android:height="24dp" android:viewportHeight="513.203"
-    android:viewportWidth="513.203" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M405.9,486.7c0,2.8 -2.3,5.1 -5.1,5.1H70.2c-2.8,0.2 -5.3,-1.9 -5.5,-4.7c-0,-0.1 -0,-0.3 -0,-0.4V34.2c-0,-4 -0.7,-7.9 -1.9,-11.6h329.1c7.9,0.1 14.2,6.5 14.2,14.4c0,0 -0,0.1 -0,0.1v188.2h21.3V37c0.1,-19.7 -15.8,-35.7 -35.5,-35.8H40.7c-8.3,-2.5 -17.3,-1.1 -24.5,3.7C6.3,12 0.5,23.4 0.6,35.5v77.8c-0.5,14.2 10.6,26.1 24.8,26.6c0,0 0,0 0,0h17.8v346.9c0,14.6 11.8,26.5 26.5,26.5h330.7c14.6,0.2 26.6,-11.4 26.9,-26c0,-0.1 0,-0.3 0,-0.4v-90.9h-21.3V486.7zM43.3,118.5H25.5c-1.7,0 -3.5,-2.1 -3.5,-5.1V35.5c-0.1,-5.1 2.1,-9.9 6.1,-13c1.3,-0.9 3,-1.4 4.6,-1.4v1.4h4.5c4,2.5 6.3,6.9 6.2,11.6V118.5z"/>
-    <path android:fillColor="#FF000000" android:pathData="M509.5,250.5l-33.2,-33.2c-4.2,-4.1 -10.9,-4.1 -15,0L295.6,383c-0.9,0.9 -1.6,2 -2.1,3.2l-27.6,60.7c-2.4,5.4 0,11.7 5.4,14.1c2.8,1.2 5.9,1.2 8.7,0l60.7,-27.6c1.2,-0.5 2.3,-1.2 3.2,-2.1l165.7,-165.7C513.6,261.4 513.6,254.6 509.5,250.5zM297,429.8l9.5,-21.3l11.4,11.4L297,429.8zM336.3,408.5l-18,-17.9l111.9,-112l18.5,18.1L336.3,408.5zM463.3,281.5l-18,-18l23.6,-23.6l18,18L463.3,281.5z"/>
-    <path android:fillColor="#FF000000" android:pathData="M139.3,75.9h192v21.3h-192z"/>
-    <path android:fillColor="#FF000000" android:pathData="M139.3,150.5h192v21.3h-192z"/>
-    <path android:fillColor="#FF000000" android:pathData="M139.3,225.2h192v21.3h-192z"/>
-    <path android:fillColor="#FF000000" android:pathData="M139.3,299.9h85.3v21.3h-85.3z"/>
-    <path android:fillColor="#FF000000" android:pathData="M256.6,299.9h21.3v21.3h-21.3z"/>
-    <path android:fillColor="#FF000000" android:pathData="M309.9,299.9h21.3v21.3h-21.3z"/>
+<vector android:height="24dp" android:viewportHeight="512.0"
+    android:viewportWidth="512.0" android:width="24dp"
+    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:pathData="M193.5,492c0,11 -9,20 -20,20H106.6c-44.1,0 -80,-35.9 -80,-80V80c0,-44.1 35.9,-80 80,-80h245.9c44.1,0 80,35.9 80,80v123c0,11 -9,20 -20,20s-20,-9 -20,-20V80c0,-22.1 -17.9,-40 -40,-40H106.6c-22.1,0 -40,17.9 -40,40v352c0,22.1 17.9,40 40,40h66.9C184.5,472 193.5,481 193.5,492zM332.5,120h-206c-11,0 -20,9 -20,20s9,20 20,20h206c11,0 20,-9 20,-20S343.5,120 332.5,120zM352.5,220c0,-11 -9,-20 -20,-20h-206c-11,0 -20,9 -20,20s9,20 20,20h206C343.5,240 352.5,231 352.5,220zM126.5,280c-11,0 -20,9 -20,20s9,20 20,20H251.6c11,0 20,-9 20,-20s-9,-20 -20,-20H126.5zM467.9,374.4L358.3,483.8c-2.4,2.4 -5.5,4.2 -8.8,5.1l-80.7,22.4c-1.8,0.5 -3.6,0.7 -5.3,0.7c-5.3,0 -10.5,-2.1 -14.3,-6c-5.1,-5.2 -6.9,-12.8 -4.8,-19.8l23.9,-78.7c1,-3.2 2.7,-6 5,-8.3l109.8,-109.6c23.4,-23.4 61.4,-23.4 84.8,0C491.3,313 491.3,351 467.9,374.4zM407.4,378.3l-28.3,-28.3l-74.1,73.9l-11.9,39.1l40.6,-11.3L407.4,378.3zM439.6,317.9c-7.8,-7.8 -20.5,-7.8 -28.3,0l-3.9,3.9l28.3,28.3l3.9,-3.9C447.4,338.3 447.4,325.7 439.6,317.9z">
+        <aapt:attr name="android:fillColor">
+            <gradient android:endX="248540.2624"
+                android:endY="-131582.0" android:startX="13603.7376"
+                android:startY="-131582.0" android:type="linear">
+                <item android:color="#FF00F2FE" android:offset="0.0"/>
+                <item android:color="#FF03EFFE" android:offset="0.021"/>
+                <item android:color="#FF24D2FE" android:offset="0.293"/>
+                <item android:color="#FF3CBDFE" android:offset="0.554"/>
+                <item android:color="#FF4AB0FE" android:offset="0.796"/>
+                <item android:color="#FF4FACFE" android:offset="1.0"/>
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
