--- a/app/src/main/res/drawable/ic_attendance.xml
+++ b/app/src/main/res/drawable/ic_attendance.xml
@@ -1,4 +1,26 @@
-<vector android:height="24dp" android:viewportHeight="59.066"
-    android:viewportWidth="59.066" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M52.84,27.12C52.41,26.4 51.69,26 50.81,26c-0,0 -0.01,0 -0.01,0c-1.67,0.01 -3.67,0.67 -5.24,1.72c-1.44,0.98 -3.53,2.78 -5.29,5.86c-0.33,0.58 -0.87,0.97 -1.46,1.06c-0,-0.13 -0,-0.29 -0,-0.43c0,-0.31 0,-0.68 -0.01,-1.08V11c0,-2.21 -1.79,-4 -4,-4s-4,1.79 -4,4v15.5c0,0.28 -0.22,0.5 -0.5,0.5s-0.5,-0.22 -0.5,-0.5V4c0,-2.21 -1.79,-4 -4,-4s-4,1.79 -4,4v22.5c0,0.28 -0.22,0.5 -0.5,0.5s-0.5,-0.22 -0.5,-0.5v-18c0,-1.93 -1.57,-3.5 -3.5,-3.5s-3.5,1.57 -3.5,3.5v20c0,0.28 -0.22,0.5 -0.5,0.5s-0.5,-0.22 -0.5,-0.5V16c0,-1.93 -1.57,-3.5 -3.51,-3.5c-1.93,0 -3.5,1.57 -3.5,3.5l0,27.2c0.97,13.98 9.55,15.87 17.81,15.87c6.85,0 12.99,-3.4 16.03,-8.82c0.39,-0.63 1.45,-2.29 2.7,-4.25c3.13,-4.91 5.75,-9.04 6.14,-9.77c0.86,-1.63 1.83,-2.91 2.78,-3.69c0.87,-0.71 1.4,-1.61 1.83,-2.4C53.29,29.7 53.48,28.19 52.84,27.12zM51.26,29.26c-0.4,0.73 -0.78,1.3 -1.28,1.71c-1.18,0.96 -2.29,2.41 -3.29,4.31c-0.38,0.72 -3.79,6.09 -6.05,9.64c-1.26,1.98 -2.32,3.64 -2.73,4.31c-2.7,4.83 -8.18,7.84 -14.3,7.84c-10.54,0 -15.12,-4.06 -15.81,-13.94V16c0,-0.83 0.67,-1.5 1.51,-1.5c0.83,0 1.5,0.67 1.5,1.5v12.5c0,1.38 1.12,2.5 2.5,2.5s2.5,-1.12 2.5,-2.5v-20c0,-0.83 0.67,-1.5 1.5,-1.5s1.5,0.67 1.5,1.5v18c0,1.38 1.12,2.5 2.5,2.5s2.5,-1.12 2.5,-2.5V4c0,-1.1 0.9,-2 2,-2s2,0.9 2,2v22.5c0,1.38 1.12,2.5 2.5,2.5s2.5,-1.12 2.5,-2.5V11c0,-1.1 0.9,-2 2,-2s2,0.9 2,2v22.17c0.01,0.41 0.01,0.76 0.01,1.05c-0,0.89 -0,1.54 0.49,2.02c0.41,0.4 0.95,0.43 1.33,0.43c1.36,-0.03 2.65,-0.83 3.38,-2.09c1.57,-2.75 3.41,-4.34 4.68,-5.2c1.23,-0.83 2.85,-1.38 4.12,-1.38c0,0 0,0 0,0c0.21,0 0.26,0.06 0.29,0.1C51.29,28.35 51.3,28.98 51.26,29.26z"/>
+<vector android:height="30dp" android:viewportHeight="464.0"
+    android:viewportWidth="464.0" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#E5A785" android:pathData="M252,272v-40h-48v232h192V272H252z"/>
+    <path android:fillColor="#F8C09C" android:pathData="M252,272h48v80h-48V272z"/>
+    <path android:fillColor="#E5A785" android:pathData="M284,272h16v80h-16V272z"/>
+    <path android:fillColor="#F8C09C" android:pathData="M300,272h48v80h-48V272z"/>
+    <path android:fillColor="#E5A785" android:pathData="M332,272h16v80h-16V272z"/>
+    <path android:fillColor="#F8C09C" android:pathData="M348,272h48v80h-48V272z"/>
+    <path android:fillColor="#E5A785" android:pathData="M380,272h16v80h-16V272z"/>
+    <path android:fillColor="#F8C09C" android:pathData="M236,352c61.9,0 112,50.1 112,112H164V352H236z"/>
+    <path android:fillColor="#F8C09C" android:pathData="M164,352h112v48H164V352z"/>
+    <path android:fillColor="#E5A785" android:pathData="M164,384h112v16H164V384z"/>
+    <path android:fillColor="#34495E" android:pathData="M228,120m-120,0a120,120 0,1 1,240 0a120,120 0,1 1,-240 0"/>
+    <path android:fillColor="#C0FAFF" android:pathData="M252,160h-16v-48c0,-4.4 -3.6,-8 -8,-8s-8,3.6 -8,8v24h-16v-24c0,-13.3 10.7,-24 24,-24c13.3,0 24,10.7 24,24V160z"/>
+    <path android:fillColor="#C0FAFF" android:pathData="M172,128h16v16h-16V128z"/>
+    <path android:fillColor="#C0FAFF" android:pathData="M316,160h-16v-48c0,-39.8 -32.2,-72 -72,-72s-72,32.2 -72,72v48h-16v-48c0,-48.6 39.4,-88 88,-88s88,39.4 88,88V160z"/>
+    <path android:fillColor="#C0FAFF" android:pathData="M268,128h16v32h-16V128z"/>
+    <path android:fillColor="#C0FAFF" android:pathData="M284,112h-16c0,-22.1 -17.9,-40 -40,-40s-40,17.9 -40,40h-16c0,-30.9 25.1,-56 56,-56S284,81.1 284,112z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M156,168h16v16h-16V168z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M172,184h16v16h-16V184z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M188,160h16v24h-16V160z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M220,160h16v32h-16V160z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M252,160h16v24h-16V160z"/>
+    <path android:fillColor="#E6EAEE" android:pathData="M268,184h16v16h-16V184z"/>
+    <path android:fillColor="#FF7059" android:pathData="M68,152h320v16H68V152z"/>
 </vector>
