--- a/app/src/main/res/drawable/ic_logout.xml
+++ b/app/src/main/res/drawable/ic_logout.xml
@@ -1,5 +1,8 @@
-<vector android:height="24dp" android:viewportHeight="471.2"
-    android:viewportWidth="471.2" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M227.6,444.2h-122.9c-33.4,0 -60.5,-27.2 -60.5,-60.5V87.5c0,-33.4 27.2,-60.5 60.5,-60.5h124.9c7.5,0 13.5,-6 13.5,-13.5s-6,-13.5 -13.5,-13.5h-124.9c-48.3,0 -87.5,39.3 -87.5,87.5v296.2c0,48.3 39.3,87.5 87.5,87.5h122.9c7.5,0 13.5,-6 13.5,-13.5S235,444.2 227.6,444.2z"/>
-    <path android:fillColor="#FF000000" android:pathData="M450,226.1l-85.8,-85.8c-5.3,-5.3 -13.8,-5.3 -19.1,0c-5.3,5.3 -5.3,13.8 0,19.1l62.8,62.8h-273.9c-7.5,0 -13.5,6 -13.5,13.5s6,13.5 13.5,13.5h273.9l-62.8,62.8c-5.3,5.3 -5.3,13.8 0,19.1c2.6,2.6 6.1,4 9.5,4s6.9,-1.3 9.5,-4l85.8,-85.8C455.3,239.9 455.3,231.3 450,226.1z"/>
+<vector android:height="24dp" android:viewportHeight="512.032"
+    android:viewportWidth="512.032" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#455A64" android:pathData="M266.7,256c-17.7,0 -32,-14.3 -32,-32s14.3,-32 32,-32h117.3V53.3c0,-29.5 -23.9,-53.3 -53.3,-53.3h-256c-5.9,0 -10.7,4.8 -10.7,10.7v426.7c0,5.9 4.8,10.7 10.7,10.7h256c29.5,0 53.3,-23.9 53.3,-53.3V256H266.7z"/>
+    <path android:fillColor="#607D8B" android:pathData="M206.8,55.7L85.6,3.7C62.2,-6.3 35.1,4.5 25.1,27.9c-2.5,5.7 -3.7,11.9 -3.7,18.1V414c-0,18.4 11,35.1 27.9,42.3l121.2,51.9c23.4,10 50.5,-0.8 60.5,-24.2c2.5,-5.7 3.7,-11.9 3.7,-18.1V98C234.7,79.6 223.7,62.9 206.8,55.7z"/>
+    <path android:fillColor="#FF000000" android:pathData="M181.4,298.7c-5.9,0 -10.7,-4.8 -10.7,-10.7v-42.7c0,-5.9 4.8,-10.7 10.7,-10.7c5.9,0 10.7,4.8 10.7,10.7v42.7C192,293.9 187.2,298.7 181.4,298.7z"/>
+    <path android:fillColor="#FFC107" android:pathData="M489.9,228.1c1.6,-4 0.7,-8.6 -2.3,-11.6l-64,-64c-4.2,-4.1 -11,-4 -15.1,0.3c-4,4.1 -4,10.7 0,14.8l45.8,45.8H266.7c-5.9,0 -10.7,4.8 -10.7,10.7c0,5.9 4.8,10.7 10.7,10.7h187.6l-45.8,45.8c-4.2,4.1 -4.4,10.8 -0.3,15.1c4.1,4.2 10.8,4.4 15.1,0.3c0.1,-0.1 0.2,-0.2 0.3,-0.3l64,-64C488.6,230.5 489.3,229.4 489.9,228.1z"/>
+    <path android:fillColor="#455A64" android:pathData="M181.4,298.7c-5.9,0 -10.7,-4.8 -10.7,-10.7v-42.7c0,-5.9 4.8,-10.7 10.7,-10.7c5.9,0 10.7,4.8 10.7,10.7v42.7C192,293.9 187.2,298.7 181.4,298.7z"/>
 </vector>
