--- a/app/src/main/res/layout-v16/fragment_fee__frag1.xml
+++ b/app/src/main/res/layout-v16/fragment_fee__frag1.xml
@@ -44,6 +44,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -57,6 +58,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -72,6 +74,7 @@
                 android:padding="18dp">
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -86,6 +89,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -101,6 +105,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -115,6 +120,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -129,6 +135,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -143,6 +150,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Final"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -157,6 +165,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -171,6 +180,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Received"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -185,6 +195,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -199,6 +210,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_Balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -213,6 +225,7 @@
             <TableRow
                 android:padding="18dp">
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -227,6 +240,7 @@
                     android:textAlignment="center"/>
 
                 <TextView
+                    android:fontFamily="@font/aldrich"
                     android:id="@+id/tv_AmpInstall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
