--- a/app/src/main/res/layout/activity_fee_tabed.xml
+++ b/app/src/main/res/layout/activity_fee_tabed.xml
@@ -7,7 +7,21 @@
     android:layout_height="match_parent"
     tools:context="in.classguru.classguru.Fee_tabedActivity">
 
-    <include layout="@layout/fee_content_layout" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarFee"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:titleTextColor="@android:color/white"
+            android:background="?attr/colorPrimary">
+        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/fee_content_layout" />
+    </LinearLayout>
+
     <android.support.design.widget.NavigationView
 
         android:id="@+id/navSideBar"
