--- a/app/src/main/res/layout/activity_portion_activity.xml
+++ b/app/src/main/res/layout/activity_portion_activity.xml
@@ -6,7 +6,21 @@
     android:layout_height="match_parent"
     android:id="@+id/portionDrawer"
     tools:context="in.classguru.classguru.Portion_activity">
-<include layout="@layout/portion_layout"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarPortion"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:titleTextColor="@android:color/white"
+            android:background="?attr/colorPrimary">
+        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/portion_layout"/>
+    </LinearLayout>
+
     <android.support.design.widget.NavigationView
 
         android:id="@+id/navSideBar"
