--- a/app/src/main/res/layout/attendance_layout.xml
+++ b/app/src/main/res/layout/attendance_layout.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <RelativeLayout
-        android:padding="10dp"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
 
         <TextView
-
+            android:textSize="18sp"
+            android:fontFamily="@font/aldrich"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
@@ -19,10 +20,12 @@
             android:layout_weight="1"
             android:text="Date"
             android:textAlignment="viewStart"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="start" />
 
         <TextView
-
+            android:textSize="18sp"
+            android:fontFamily="@font/aldrich"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
@@ -31,13 +34,14 @@
             android:layout_weight="1"
             android:text="Attendance"
             android:textAlignment="viewStart"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="start" />
 
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".1">
+        android:layout_weight=".12">
 
         <ListView
             android:id="@+id/lv_attend"
