--- a/app/src/main/res/layout/fragment_fee__frag2.xml
+++ b/app/src/main/res/layout/fragment_fee__frag2.xml
@@ -19,10 +19,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <TableRow android:layout_weight="9">
+                <TableRow android:layout_weight="9" >
 
                     <TextView
-
+                        android:fontFamily="@font/aldrich"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -31,6 +31,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:fontFamily="@font/aldrich"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -43,7 +44,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Chq Date"
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -52,7 +53,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Bank Name"
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -61,7 +62,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Chq No."
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -70,7 +71,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Transac. ID"
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -79,7 +80,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Received "
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -88,7 +89,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Recent Pay"
                         android:textAlignment="center"
                         android:textStyle="bold" />
@@ -97,7 +98,7 @@
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-
+                        android:fontFamily="@font/aldrich"
                         android:text="Balance"
                         android:textAlignment="center"
                         android:textStyle="bold" />
