--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="#09B0B9"
+    android:background="@drawable/sidebar_img3"
+    android:orientation="horizontal"
     android:padding="20dp">
-    <de.hdodenhof.circleimageview.CircleImageView
+
+    <!--<de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_sProfile"
-        android:src="@drawable/user"
-        android:layout_width="75dp"
-        android:layout_height="75dp" />
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/user" />-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/iv_sProfile1"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+
+        app:cardBackgroundColor="#dfdfe2"
+        app:cardCornerRadius="20dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="20dp"
+            app:cardUseCompatPadding="true">
+
+            <ImageView
+                android:id="@+id/iv_sProfile"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop" />
+        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
     <!--<ImageView
         android:id="@+id/iv_sProfile"
         android:src="@drawable/user"
@@ -22,16 +47,25 @@
         android:id="@+id/tvSideName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginVertical="0dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/aldrich"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_toEndOf="@+id/iv_sProfile1"
+        android:layout_toRightOf="@+id/iv_sProfile1"
+        android:layout_marginLeft="10dp"/>
 
     <TextView
         android:id="@+id/tvSideNumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:layout_below="@+id/tvSideName"
+        android:layout_toEndOf="@+id/iv_sProfile1"
+        android:layout_toRightOf="@+id/iv_sProfile1"
+        android:fontFamily="@font/aldrich"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"/>
 
-</LinearLayout>
+</RelativeLayout>
