--- a/app/src/main/res/layout/profile2.xml
+++ b/app/src/main/res/layout/profile2.xml
@@ -7,28 +7,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_weight="1.25"
+        android:layout_weight="1.7"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
+        <!--<ImageView
             android:id="@+id/iv_nav"
             android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_navigation1" />
+            android:layout_height="30dp" />-->
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_toRightOf="@+id/iv_nav"
-            android:src="@drawable/logo_200" />
+            android:src="@drawable/logo_200" />-->
 
         <android.support.v7.widget.CardView
             android:id="@+id/card1"
             android:layout_width="130dp"
             android:layout_height="180dp"
-            android:layout_below="@+id/iv_nav"
-            android:layout_toEndOf="@+id/iv_nav"
-            android:layout_toRightOf="@+id/iv_nav"
+            android:layout_margin="20dp"
             app:cardBackgroundColor="#dfdfe2"
             android:layout_marginTop="10dp"
             app:cardCornerRadius="20dp">
@@ -56,106 +53,123 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/aldrich"
             android:text="Akshay Yogesh Gohil Neeta"
-            android:textColor="@color/black"
             android:layout_toRightOf="@+id/card1"
             android:layout_below="@+id/iv_nav"
             android:layout_marginTop="25dp"
             android:textSize="18sp"
             android:layout_toEndOf="@+id/card1"
             android:layout_marginLeft="10dp"/>
-
-        <TextView
-            android:id="@+id/tv_numb"
+        <ImageView
+            android:id="@+id/ic_mobile"
+            android:src="@drawable/ic_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_name"
             android:layout_marginTop="5dp"
             android:layout_alignStart="@+id/tv_name"
-            android:fontFamily="@font/aldrich"
-            android:text="7208121247"
-            android:layout_alignLeft="@+id/tv_name" />
+            android:layout_alignLeft="@+id/tv_name"/>
         <TextView
-            android:id="@+id/tvYear"
-            android:text="2018"
+            android:id="@+id/tv_numb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/ic_mobile"
+            android:layout_below="@+id/tv_name"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/aldrich"
+            android:text="7208121247" />
+        <TextView
+            android:id="@+id/batch_name"
+            android:text="Batch"
+            android:layout_below="@+id/tv_numb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/card1"
             android:layout_toRightOf="@+id/card1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/seperator"
+            android:textStyle="bold"
+            android:text=" : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_numb"
+            android:layout_toRightOf="@+id/batch_name"
+            android:layout_marginTop="5dp"/>
+        <TextView
+            android:id="@+id/tvBatch"
+            android:text="2018"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/batch_name"
+            android:layout_toRightOf="@+id/batch_name"
             android:layout_below="@+id/tv_numb"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
-            android:textSize="17sp"/>
-        <!--<View
-            android:id="@+id/hr"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/card1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>-->
-        <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/card1"
-            android:layout_width="match_parent"
+            android:textSize="15sp"/>
+        <TextView
+            android:id="@+id/time_name"
+            android:text="Time"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:weightSum="3">
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_weight="1.4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/aldrich"
-                    android:gravity="center"
-                    android:text="Batch"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-                <TextView
-                    android:id="@+id/tvBatch"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/aldrich"
-                    android:gravity="center"
-                    android:text="Batch"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-            <View
-                android:layout_weight="0.01"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@android:color/darker_gray"/>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_weight="1.4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-                <TextView
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/aldrich"
-                    android:gravity="center"
-                    android:text="Time"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-                <TextView
-                    android:id="@+id/tvTiming"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/aldrich"
-                    android:gravity="center"
-                    android:text="Batch"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-
-        </LinearLayout>
-        <!--<View
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>-->
+            android:layout_below="@+id/batch_name"
+            android:layout_toEndOf="@+id/card1"
+            android:layout_toRightOf="@+id/card1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/seperator1"
+            android:textStyle="bold"
+            android:text=" : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/seperator"
+            android:layout_toRightOf="@+id/time_name"
+            android:layout_alignBottom="@+id/time_name"
+            android:layout_alignTop="@+id/time_name"/>
+        <TextView
+            android:id="@+id/tvTiming"
+            android:text="time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/seperator1"
+            android:layout_toRightOf="@+id/seperator1"
+            android:layout_alignBottom="@+id/seperator1" />
+        <TextView
+            android:id="@+id/year_name"
+            android:text="Year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/time_name"
+            android:layout_toEndOf="@+id/card1"
+            android:layout_toRightOf="@+id/card1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="16sp"
+            />
+        <TextView
+            android:id="@+id/seperator2"
+            android:textStyle="bold"
+            android:text=" : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/seperator"
+            android:layout_toRightOf="@+id/year_name"
+            android:layout_alignBottom="@+id/year_name"
+            android:layout_alignTop="@+id/year_name"/>
+        <TextView
+            android:id="@+id/tvYear"
+            android:text="year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/seperator2"
+            android:layout_toRightOf="@+id/seperator2"
+            android:layout_alignBottom="@+id/seperator2"/>
     </RelativeLayout>
     <ScrollView
+        android:padding="10dp"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -171,7 +185,7 @@
                     android:id="@+id/ic_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_user_large"
+                    android:src="@drawable/ic_user_large1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/name_text"
@@ -207,7 +221,7 @@
                     android:id="@+id/ic_contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_phone"
+                    android:src="@drawable/ic_phone1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/parent_contact"
@@ -243,7 +257,7 @@
                     android:id="@+id/ic_gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_gender"
+                    android:src="@drawable/ic_gender1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/gender"
@@ -279,7 +293,7 @@
                     android:id="@+id/ic_dob"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_dob"
+                    android:src="@drawable/ic_dob1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/dob"
@@ -315,7 +329,7 @@
                     android:id="@+id/ic_course"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_course"
+                    android:src="@drawable/ic_course1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/course"
@@ -351,7 +365,7 @@
                     android:id="@+id/ic_standard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_standard"
+                    android:src="@drawable/ic_standard1"
                     android:layout_marginLeft="30dp" />
                 <TextView
                     android:id="@+id/standard"
@@ -359,7 +373,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_toRightOf="@+id/ic_standard"
-                    android:text="Course Details"
+                    android:text="Standard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"/>
